<resources>
    <string name="app_name">WiraEnergiMobile</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">Search</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_form_customer">Form Customer</string>
    <string name="title_activity_maps_coordinate">Map</string>
    <string name="title_activity_dashboard_admin">Dashboard Admin</string>
    <string name="title_activity_dashboard_customer">Dashboard Customer</string>
    <string name="title_activity_list_customer">List Customer</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_verification_status">Verification Status</string>
    <string name="title_activity_waiting_approval">Waiting for Approval</string>
    <string name="title_activity_request_quotation">Request Quotation</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_form_quotation">Form Quotation</string>
    <string name="title_activity_report_quotation">Report Quotation</string>
    <string name="title_activity_item_quotation">Item Quotation</string>
    <string name="title_activity_sales_quotation">Sales Quotation</string>
    <string name="title_activity_purchase_order">Purchase Order</string>
    <string name="title_activity_good_receive">Good Receive</string>
    <string name="title_activity_sales_order">Sales Order</string>
    <string name="title_activity_delivery_order">Delivery Order</string>
    <string name="title_activity_invoice">Invoice</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_form_request_quotation">Form Request Quotation</string>
    <string name="title_activity_list_quotation">List Quotation</string>
    <string name="title_activity_list_request_quotation">List Request Quotation</string>
    <string name="title_activity_form_quotation_order">Form Quotation Order</string>
    <string name="title_activity_form_request_quotation_customer">Form Request Quotation Customer</string>
    <string name="title_activity_form_sales_quotation">Form Sales Quotation</string>
    <string name="title_activity_form_request_sales_order">Form Request Sales Order</string>
    <string name="title_activity_form_sales_order">Form Sales Order</string>
    <string name="title_activity_list_request_customer">List Request Customer</string>
    <string name="title_activity_detail_request_customer">Detail Request Customer</string>
    <string name="title_activity_detail_customer">Detail Customer</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string-array name="list_of_province">
        <item>Aceh</item>
        <item>Bali</item>
        <item>Bangka Belitung</item>
        <item>Banten</item>
        <item>Bengkulu</item>
        <item>Gorontalo</item>
        <item>Jakarta</item>
        <item>Jambi</item>
        <item>Jawa Barat</item>
        <item>Jawa Tengah</item>
        <item>Jawa Timur</item>
        <item>Kalimantan Barat</item>
        <item>Kalimantan Selatan</item>
        <item>Kalimantan Tengah</item>
        <item>Kalimantan Timur</item>
        <item>Kalimantan Utara</item>
        <item>Kepulauan Riau</item>
        <item>Lampung</item>
        <item>Maluku Utara</item>
        <item>Maluku</item>
        <item>Nusa Tenggara Barat</item>
        <item>Nusa Tenggara Timur</item>
        <item>Papua Barat</item>
        <item>Papua</item>
        <item>Riau</item>
        <item>Sulawesi Selatan</item>
        <item>Sulawesi Tengah</item>
        <item>Sulawesi Tenggara</item>
        <item>Sulawesi Utara</item>
        <item>Sumatera Barat</item>
        <item>Sumatera Selatan</item>
        <item>Sumatera Utara</item>
        <item>Yogyakarta</item>
    </string-array>
    <string-array name="list_of_city">
        <item>Banda Aceh</item>
        <item>Langsa</item>
        <item>Lhokseumawe</item>
        <item>Meulaboh</item>
        <item>Sabang</item>
        <item>Subulussalam</item>
        <item>Denpasar</item>
        <item>Pangkalpinang</item>
        <item>Cilegon</item>
        <item>Serang</item>
        <item>Tangerang Selatan</item>
        <item>Tangerang</item>
        <item>Bengkulu</item>
        <item>Gorontalo</item>
        <item>Kota Administrasi Jakarta Barat</item>
        <item>Kota Administrasi Jakarta Pusat</item>
        <item>Kota Administrasi Jakarta Selatan</item>
        <item>Kota Administrasi Jakarta Timur</item>
        <item>Kota Administrasi Jakarta Utara</item>
        <item>Sungai Penuh</item>
        <item>Jambi</item>
        <item>Bandung</item>
        <item>Bekasi</item>
        <item>Bogor</item>
        <item>Cimahi</item>
        <item>Cirebon</item>
        <item>Depok</item>
        <item>Sukabumi</item>
        <item>Tasikmalaya</item>
        <item>Banjar</item>
        <item>Magelang</item>
        <item>Pekalongan</item>
        <item>Purwokerto</item>
        <item>Salatiga</item>
        <item>Semarang</item>
        <item>Surakarta</item>
        <item>Batu</item>
        <item>Blitar</item>
        <item>Kediri</item>
        <item>Madiun</item>
        <item>Malang</item>
        <item>Mojokerto</item>
        <item>Pasuruan</item>
        <item>Probolinggo</item>
        <item>Surabaya</item>
        <item>Pontianak</item>
        <item>Singkawang</item>
        <item>Banjarbaru</item>
        <item>Banjarmasin</item>
        <item>Palangkaraya</item>
        <item>Balikpapan</item>
        <item>Bontang</item>
        <item>Samarinda</item>
        <item>Tarakan</item>
        <item>Batam</item>
        <item>Tanjungpinang</item>
        <item>Bandar Lampung</item>
        <item>Kotabumi</item>
        <item>Liwa</item>
        <item>Metro</item>
        <item>Ternate</item>
        <item>Tidore Kepulauan</item>
        <item>Ambon</item>
        <item>Tual</item>
        <item>Bima</item>
        <item>Mataram</item>
        <item>Kupang</item>
        <item>Sorong</item>
        <item>Jayapura</item>
        <item>Dumai</item>
        <item>Pekanbaru</item>
        <item>Makassar</item>
        <item>Palopo</item>
        <item>Parepare</item>
        <item>Palu</item>
        <item>Bau-Bau</item>
        <item>Kendari</item>
        <item>Bitung</item>
        <item>Kotamobagu</item>
        <item>Manado</item>
        <item>Tomohon</item>
        <item>Bukittinggi</item>
        <item>Padang</item>
        <item>Padangpanjang</item>
        <item>Pariaman</item>
        <item>Payakumbuh</item>
        <item>Sawahlunto</item>
        <item>Solok</item>
        <item>Lubuklinggau</item>
        <item>Pagaralam</item>
        <item>Palembang</item>
        <item>Prabumulih</item>
        <item>Binjai</item>
        <item>Medan</item>
        <item>Padang Sidempuan</item>
        <item>Pematangsiantar</item>
        <item>Sibolga</item>
        <item>Tanjungbalai</item>
        <item>Tebingtinggi</item>
        <item>Yogyakarta</item>
    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="dashboard">Dashboard</string>
    <string name="website">PT. Wira Energi</string>
    <string name="welcome">Welcome, </string>
    <string name="selected_item">Selected item</string>
    <string name="select_one">Select One</string>
    <string name="search_hint">Search.....</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Password Confirmation</string>
    <string name="position">Position</string>
    <string name="date">Tanggal Kirim</string>
    <string name="item">Item: </string>
    <string name="unit">Unit: </string>
    <string name="qty">Quantity: </string>
    <string name="note">Note: </string>
    <string name="full_name">Full Name</string>
    <string name="reset">Reset</string>
    <string name="role">Choose Role</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="view_data">View Data</string>
    <string name="wiraenergi">Wira Energi</string>
    <string name="verification">Email Verification Status</string>
    <string name="waiting">Wait For Approval</string>
    <string name="please_wait">Please Wait, we will contact you soon after your data have been verified. Thank You...</string>
    <string name="succes">Success!</string>
    <string name="send_date">Send Date</string>
    <string name="checkBoxLogin">Remember Me |</string>
    <string name="lost_password">Lost your password?</string>
    <string name="not_member">Not a member?</string>
    <string name="already_member">Already a member?</string>
    <string name="footer">2016 All Rights Reserved. PT. Wiraenergi</string>
    <string name="titiktitik">........</string>
    <string name="customer_code">Customer Code</string>
    <string name="customer_name">Customer Name</string>
    <string name="address">Address</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="zip_code">Zip code</string>
    <string name="group">Group</string>
    <string name="term">Term.</string>
    <string name="valuta">Valuta</string>
    <string name="npwp">NPWP</string>
    <string name="phone">Phone</string>
    <string name="mobile">Mobile</string>
    <string name="fax">Fax</string>
    <string name="tax">Tax/PPN</string>
    <string name="active">Active</string>
    <string name="websites">Website</string>
    <string name="notes">Notes</string>
    <string name="address_name">Address name</string>
    <string name="contact_i1">Contact Info 1</string>
    <string name="contact_i2">Contact Info 2</string>
    <string name="contact_i3">Contact Info 3</string>
    <string name="positions">Position</string>
    <string name="btn_add_shipping">Add Shipping</string>
    <string name="person_in_charge">Person in charge</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="name">Name</string>
    <string name="pic_name">PIC Name</string>
    <string name="eta">ETA</string>
    <string name="maps">Map Coordinate</string>
    <string name="code">Code</string>
    <string name="customer">Customer</string>
    <string name="do_date">DO Date</string>
    <string name="invoice_code">Invoice Code</string>
    <string name="invoice_date">Invoice Date</string>
    <string name="invoice_due_date">Invoice Due Date</string>
    <string name="invoice_amount">Invoice Amount</string>
    <string name="invoice_term">Invoice Term (Days)</string>
    <string name="invoice">INVOICE</string>
    <string name="payment">PAYMENT</string>
    <string name="payment_date">Payment Date</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="do_code">DO Code</string>
    <string name="expedition">Expedition</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="delivery_qty">Delivery Qty</string>
    <string name="qty_no">QT No:</string>
    <string name="qty_date">QT Date:</string>
    <string name="due_date">Due Date:</string>
    <string name="bruto">Bruto:</string>
    <string name="disc">Disc (%):</string>
    <string name="ppn">PPN:</string>
    <string name="other_cost">Other Cost:</string>
    <string name="netto">Netto:</string>
    <string name="terbilang">Terbilang:</string>
</resources>