<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uci.develops.wiraenergimobile.activity.FormQuotationActivity"
    tools:showIn="@layout/activity_form_quotation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:columnCount="2">
            <TextView
                android:layout_width="0dp"
                android:padding="@dimen/keyline_xs"
                android:text="@string/qty_no"
                android:textStyle="bold"
                app:layout_columnWeight="1" />
            <EditText
                android:id="@+id/editText_qty_number"
                android:layout_width="0dp"
                android:background="@drawable/edit_text_background"
                android:imeOptions="actionNext"
                android:inputType="number"
                app:layout_columnWeight="2"
                app:layout_gravity="center_vertical" />
            <TextView
                android:layout_width="0dp"
                android:padding="@dimen/keyline_xs"
                android:text="@string/qty_date"
                android:textStyle="bold"
                app:layout_columnWeight="1" />
            <EditText
                android:id="@+id/editText_qty_date"
                android:layout_width="0dp"
                android:background="@drawable/edit_text_background"
                app:layout_columnWeight="1"
                app:layout_gravity="center_vertical" />
            <TextView
                android:layout_width="0dp"
                android:padding="@dimen/keyline_xs"
                android:text="@string/customer"
                android:textStyle="bold"
                app:layout_columnWeight="1" />
            <Spinner
                android:id="@+id/spinner_customer"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                app:layout_gravity="center_vertical"
                tools:listitem="@android:layout/simple_spinner_dropdown_item" />

            <TextView
                android:layout_width="0dp"
                android:padding="@dimen/keyline_xs"
                android:text="@string/tax"
                android:textStyle="bold"
                app:layout_columnWeight="1" />

            <Spinner
                android:id="@+id/spinner_tax_ppn"
                android:layout_width="0dp"
                app:layout_columnWeight="1"
                app:layout_gravity="center_vertical"
                tools:listitem="@android:layout/simple_spinner_dropdown_item" />

            <TextView
                android:layout_width="0dp"
                android:padding="@dimen/keyline_xs"
                android:text="@string/due_date"
                android:textStyle="bold"
                app:layout_columnWeight="1" />

            <EditText
                android:id="@+id/editText_due_date"
                android:layout_width="0dp"
                android:background="@drawable/edit_text_background"
                app:layout_columnWeight="1"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="0dp"
                android:padding="@dimen/keyline_xs"
                android:text="@string/shipping_address"
                android:textStyle="bold"
                app:layout_columnWeight="1" />

            <EditText
                android:id="@+id/editText_shipping_address"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:background="@drawable/edit_text_background"
                app:layout_columnWeight="1"
                app:layout_gravity="center_vertical" />
        </android.support.v7.widget.GridLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@drawable/drop_shadow" />

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white"
            app:columnCount="5">

            <LinearLayout
                android:layout_width="0dp"
                android:orientation="vertical"
                app:layout_columnWeight="2">

                <TextView
                    android:id="@+id/textView_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Solar"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_qty_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1000"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView_unit_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="liter"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView_view"
                android:src="@drawable/ic_view_24dp"
                android:background="@color/divider"
                android:padding="@dimen/keyline_xs"
                android:layout_marginRight="5dp"/>

            <ImageView
                android:id="@+id/imageView_edit"
                android:background="@color/divider"
                android:padding="@dimen/keyline_xs"
                android:src="@drawable/ic_edit_24dp"
                android:layout_marginRight="5dp"/>

            <ImageView
                android:id="@+id/imageView_delete"
                android:background="@color/divider"
                android:padding="@dimen/keyline_xs"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_delete_24dp" />

            <ImageView
                android:id="@+id/imageView_add"
                android:background="@color/divider"
                android:padding="@dimen/keyline_xs"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_add_24dp" />

        </android.support.v7.widget.GridLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:background="@drawable/drop_shadow" />

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white"
            app:columnCount="2">

            <TextView
                android:layout_width="0dp"
                android:padding="@dimen/keyline_xs"
                android:text="@string/terbilang"
                android:textStyle="bold"
                app:layout_columnWeight="1" />

            <EditText
                android:id="@+id/editText_terbilang"
                android:layout_width="0dp"
                android:background="@drawable/edit_text_background"
                android:imeOptions="actionNext"
                android:inputType="number"
                app:layout_columnWeight="2"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="0dp"
                android:padding="@dimen/keyline_xs"
                android:text="@string/note"
                android:textStyle="bold"
                app:layout_columnWeight="1" />

            <EditText
                android:id="@+id/editText_note"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:background="@drawable/edit_text_background"
                app:layout_columnWeight="1"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="0dp"
                android:padding="@dimen/keyline_xs"
                android:text="@string/bruto"
                android:textStyle="bold"
                app:layout_columnWeight="1" />

            <EditText
                android:id="@+id/editText_bruto"
                android:layout_width="0dp"
                android:background="@drawable/edit_text_background"
                android:imeOptions="actionNext"
                android:inputType="number"
                app:layout_columnWeight="2"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="0dp"
                android:padding="@dimen/keyline_xs"
                android:text="@string/disc"
                android:textStyle="bold"
                app:layout_columnWeight="1" />

            <LinearLayout
                android:layout_width="0dp"
                android:orientation="horizontal"
                app:layout_columnWeight="2">

                <EditText
                    android:id="@+id/editText_disc_percent"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:imeOptions="actionNext"
                    android:inputType="number" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/keyline_xs"
                    android:text="%"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/eidtText_disc_number"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_background"
                    android:imeOptions="actionNext"
                    android:inputType="number" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:padding="@dimen/keyline_xs"
                android:text="@string/ppn"
                android:textStyle="bold"
                app:layout_columnWeight="1" />

            <EditText
                android:id="@+id/editText_ppn"
                android:layout_width="0dp"
                android:background="@drawable/edit_text_background"
                android:imeOptions="actionNext"
                android:inputType="number"
                app:layout_columnWeight="2"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="0dp"
                android:padding="@dimen/keyline_xs"
                android:text="@string/other_cost"
                android:textStyle="bold"
                app:layout_columnWeight="1" />

            <EditText
                android:id="@+id/editText_other_cost"
                android:layout_width="0dp"
                android:background="@drawable/edit_text_background"
                android:imeOptions="actionNext"
                android:inputType="number"
                app:layout_columnWeight="2"
                app:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="0dp"
                android:padding="@dimen/keyline_xs"
                android:text="@string/netto"
                android:textStyle="bold"
                app:layout_columnWeight="1" />

            <EditText
                android:id="@+id/editText_netto"
                android:layout_width="0dp"
                android:background="@drawable/edit_text_background"
                android:imeOptions="actionNext"
                android:inputType="number"
                app:layout_columnWeight="2"
                app:layout_gravity="center_vertical" />
        </android.support.v7.widget.GridLayout>

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/white"
            app:columnCount="2">

            <Button
                android:id="@+id/button_cancel"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/cancel"
                app:layout_columnWeight="1" />

            <Button
                android:id="@+id/button_save"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/save"
                app:layout_columnWeight="1" />
        </android.support.v7.widget.GridLayout>
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
