<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground">

    <LinearLayout
        android:layout_width="@dimen/narrow_container"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/waiting"
            android:textAppearance="@style/TextAppearance.AppTheme.Large" />
        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:src="@drawable/wait" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:textAppearance="@style/TextAppearance.AppTheme.Small"
            android:gravity="center"
            android:text="@string/please_wait"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/drop_shadow" />
        <Button
            android:id="@+id/button_view_data"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@color/MediumSeaGreen"
            android:text="@string/view_data"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppTheme.Small"
            android:textColor="@color/White"
            android:layout_gravity="center"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
