<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:attr/colorBackground"
    tools:context=".activity.VerificationStatusActivity">

    <LinearLayout
        android:layout_width="@dimen/narrow_container"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/verification"
            android:textAppearance="@style/TextAppearance.AppTheme.Large" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:src="@drawable/success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:text="@string/succes"
            android:textAppearance="@style/TextAppearance.AppTheme.Large" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/drop_shadow" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="10dp">
        <Button
            android:id="@+id/button_view_data"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@color/DarkCyan"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textAppearance="@style/TextAppearance.AppTheme.Small"
            android:textColor="@color/White" />
    </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
