<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            android:src="@drawable/ic_home_black_24dp"
            app:layout_gravity="center_vertical" />

        <Spinner
            android:id="@+id/spinner_shipping_address_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            app:layout_gravity="center_vertical"
            tools:listitem="@android:layout/simple_spinner_dropdown_item" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            app:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/editText_shipping_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/edit_text_background"
            android:hint="@string/address"
            android:imeOptions="actionNext"
            android:inputType="textCapWords|textPostalAddress"
            android:textColorHint="@color/colorGray"
            app:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            app:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/editText_shipping_PIC"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/edit_text_background"
            android:hint="@string/pic_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords|textPostalAddress"
            android:textColorHint="@color/colorGray"
            app:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            app:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/editText_shipping_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/edit_text_background"
            android:hint="@string/phone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:textColorHint="@color/colorGray"
            app:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="12dp"
            app:layout_gravity="center_vertical" />

        <EditText
            android:id="@+id/editText_shipping_mobile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@drawable/edit_text_background"
            android:hint="@string/mobile"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:textColorHint="@color/colorGray"
            app:layout_gravity="center_vertical" />
    </LinearLayout>
</LinearLayout>